@@ -15,11 +15,17 @@
 	<description>Provides communication implementations for distributed simulations on multiple jvms.</description>
 
 	<properties>
-		<aeron.version>1.44.1</aeron.version>
+		<aeron.version>1.49.3</aeron.version>
 		<hazelcast.version>5.6.0</hazelcast.version>
 
 		<!-- Use -DskipShaded=false to build a executable jar. -->
 		<skipShaded>true</skipShaded>
+
+			
+		<!-- Required by Aeron 1.47+, see https://github.com/aeron-io/aeron/wiki/Change-Log#1470-2025-01-17 -->
+		<test.jvm.aeron>
+			--add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+		</test.jvm.aeron>
 	</properties>
 
 	<dependencies>
@@ -119,6 +125,15 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>${test.jvm.aeron} ${argLine}</argLine>
+				</configuration>
 			</plugin>
 
 		</plugins>
